fix aligns buttons with the name into header of profile page

--- a/app/styles/profile/profile.scss
+++ b/app/styles/profile/profile.scss
@@ -47,6 +47,7 @@
 
         .header-wrapper {
           padding-top: 20px;
+          padding-left: 30px;
           border-bottom: 3px solid $moiDarkGreen;
 
           .user-frame {
@@ -58,11 +59,12 @@
             color: $moiDarkGreen;
             font-size: 45px;
             font-weight: bold;
-            margin-top: 15px;
             font-family: FontMoi-Title;
             line-height: 45px;
             margin-right: 10px;
             margin-left: 10px;
+            display: flex;
+            align-items: center;
           }
 
           .btns {
